--- a/index.html
+++ b/index.html
@@ -4,40 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Docs by gankgu002</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
+    <div class="wrapper">
       <header>
         <h1>Docs</h1>
         <p>markdown documents</p>
+
+        <p class="view"><a href="https://github.com/gankgu002/docs">View the Project on GitHub <small>gankgu002/docs</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/gankgu002/docs/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/gankgu002/docs/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/gankgu002/docs">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/gankgu002/docs" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/gankgu002/docs/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/gankgu002/docs/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
       <section>
         <h3>documentation of some linux services</h3>
 
@@ -46,11 +35,11 @@
 </ul>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/gankgu002">gankgu002</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
+        <p>This project is maintained by <a href="https://github.com/gankgu002">gankgu002</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
